--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hint_pwd">6-16位数字，英文区分大小写</string>
     <string name="hint_account">6-20位数字，英文</string>
     <string name="enter">进入</string>
+    <string name="check_new_version">检查更新</string>
 </resources>
